legacy/src/server/compiler/output/DMQField/DMQFieldParser.js
// Generated from C:\git-seaquail.visualstudio.com\AntlrEditor\src\server\compiler\output\DMQField\DMQField.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('antlr4/index');
var DMQFieldListener = require('./DMQFieldListener').DMQFieldListener;
var DMQFieldVisitor = require('./DMQFieldVisitor').DMQFieldVisitor;

var grammarFileName = "DMQField.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'@'", "','", "'.'", null, null, null, "'['", 
                     "']'", "'('", "')'" ];

var symbolicNames = [ null, "ATPERSAND", "COMMA", "DOT", "SAFENAME", "ANYNAME", 
                      "AS", "LSQBRACKET", "RSQBRACKET", "LPAREN", "RPAREN", 
                      "OPERATOR", "WS" ];

var ruleNames =  [ "aliasedExpr", "alias", "expr", "fieldOperation", "fieldModifier", 
                   "fieldOperator", "fieldExpressionGroup", "fieldExpression", 
                   "fieldChain", "fieldChainLink", "fieldName", "variable", 
                   "safeFieldName", "escapedFieldName", "functionCall", 
                   "functionName", "singleParameter", "parameterList" ];

function DMQFieldParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

DMQFieldParser.prototype = Object.create(antlr4.Parser.prototype);
DMQFieldParser.prototype.constructor = DMQFieldParser;

Object.defineProperty(DMQFieldParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

DMQFieldParser.EOF = antlr4.Token.EOF;
DMQFieldParser.ATPERSAND = 1;
DMQFieldParser.COMMA = 2;
DMQFieldParser.DOT = 3;
DMQFieldParser.SAFENAME = 4;
DMQFieldParser.ANYNAME = 5;
DMQFieldParser.AS = 6;
DMQFieldParser.LSQBRACKET = 7;
DMQFieldParser.RSQBRACKET = 8;
DMQFieldParser.LPAREN = 9;
DMQFieldParser.RPAREN = 10;
DMQFieldParser.OPERATOR = 11;
DMQFieldParser.WS = 12;

DMQFieldParser.RULE_aliasedExpr = 0;
DMQFieldParser.RULE_alias = 1;
DMQFieldParser.RULE_expr = 2;
DMQFieldParser.RULE_fieldOperation = 3;
DMQFieldParser.RULE_fieldModifier = 4;
DMQFieldParser.RULE_fieldOperator = 5;
DMQFieldParser.RULE_fieldExpressionGroup = 6;
DMQFieldParser.RULE_fieldExpression = 7;
DMQFieldParser.RULE_fieldChain = 8;
DMQFieldParser.RULE_fieldChainLink = 9;
DMQFieldParser.RULE_fieldName = 10;
DMQFieldParser.RULE_variable = 11;
DMQFieldParser.RULE_safeFieldName = 12;
DMQFieldParser.RULE_escapedFieldName = 13;
DMQFieldParser.RULE_functionCall = 14;
DMQFieldParser.RULE_functionName = 15;
DMQFieldParser.RULE_singleParameter = 16;
DMQFieldParser.RULE_parameterList = 17;

function AliasedExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DMQFieldParser.RULE_aliasedExpr;
    return this;
}

AliasedExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AliasedExprContext.prototype.constructor = AliasedExprContext;

AliasedExprContext.prototype.EOF = function() {
    return this.getToken(DMQFieldParser.EOF, 0);
};

AliasedExprContext.prototype.alias = function() {
    return this.getTypedRuleContext(AliasContext,0);
};

AliasedExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.enterAliasedExpr(this);
	}
};

AliasedExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.exitAliasedExpr(this);
	}
};

AliasedExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DMQFieldVisitor ) {
        return visitor.visitAliasedExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DMQFieldParser.AliasedExprContext = AliasedExprContext;

DMQFieldParser.prototype.aliasedExpr = function() {

    var localctx = new AliasedExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, DMQFieldParser.RULE_aliasedExpr);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 37; 
        this._errHandler.sync(this);
        var _alt = 1;
        do {
        	switch (_alt) {
        	case 1:
        		this.state = 36;
        		this.matchWildcard();
        		break;
        	default:
        		throw new antlr4.error.NoViableAltException(this);
        	}
        	this.state = 39; 
        	this._errHandler.sync(this);
        	_alt = this._interp.adaptivePredict(this._input,0, this._ctx);
        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
        this.state = 42;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===DMQFieldParser.AS) {
            this.state = 41;
            this.alias();
        }

        this.state = 44;
        this.match(DMQFieldParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function AliasContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DMQFieldParser.RULE_alias;
    return this;
}

AliasContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AliasContext.prototype.constructor = AliasContext;

AliasContext.prototype.AS = function() {
    return this.getToken(DMQFieldParser.AS, 0);
};

AliasContext.prototype.fieldName = function() {
    return this.getTypedRuleContext(FieldNameContext,0);
};

AliasContext.prototype.enterRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.enterAlias(this);
	}
};

AliasContext.prototype.exitRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.exitAlias(this);
	}
};

AliasContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DMQFieldVisitor ) {
        return visitor.visitAlias(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DMQFieldParser.AliasContext = AliasContext;

DMQFieldParser.prototype.alias = function() {

    var localctx = new AliasContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, DMQFieldParser.RULE_alias);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 46;
        this.match(DMQFieldParser.AS);
        this.state = 47;
        this.fieldName();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DMQFieldParser.RULE_expr;
    return this;
}

ExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExprContext.prototype.constructor = ExprContext;

ExprContext.prototype.fieldOperation = function() {
    return this.getTypedRuleContext(FieldOperationContext,0);
};

ExprContext.prototype.EOF = function() {
    return this.getToken(DMQFieldParser.EOF, 0);
};

ExprContext.prototype.alias = function() {
    return this.getTypedRuleContext(AliasContext,0);
};

ExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.enterExpr(this);
	}
};

ExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.exitExpr(this);
	}
};

ExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DMQFieldVisitor ) {
        return visitor.visitExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DMQFieldParser.ExprContext = ExprContext;

DMQFieldParser.prototype.expr = function() {

    var localctx = new ExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, DMQFieldParser.RULE_expr);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 49;
        this.fieldOperation();
        this.state = 51;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===DMQFieldParser.AS) {
            this.state = 50;
            this.alias();
        }

        this.state = 53;
        this.match(DMQFieldParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FieldOperationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DMQFieldParser.RULE_fieldOperation;
    return this;
}

FieldOperationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FieldOperationContext.prototype.constructor = FieldOperationContext;

FieldOperationContext.prototype.fieldModifier = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FieldModifierContext);
    } else {
        return this.getTypedRuleContext(FieldModifierContext,i);
    }
};

FieldOperationContext.prototype.fieldOperator = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FieldOperatorContext);
    } else {
        return this.getTypedRuleContext(FieldOperatorContext,i);
    }
};

FieldOperationContext.prototype.enterRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.enterFieldOperation(this);
	}
};

FieldOperationContext.prototype.exitRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.exitFieldOperation(this);
	}
};

FieldOperationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DMQFieldVisitor ) {
        return visitor.visitFieldOperation(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DMQFieldParser.FieldOperationContext = FieldOperationContext;

DMQFieldParser.prototype.fieldOperation = function() {

    var localctx = new FieldOperationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, DMQFieldParser.RULE_fieldOperation);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 55;
        this.fieldModifier();
        this.state = 61;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===DMQFieldParser.OPERATOR) {
            this.state = 56;
            this.fieldOperator();
            this.state = 57;
            this.fieldModifier();
            this.state = 63;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FieldModifierContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DMQFieldParser.RULE_fieldModifier;
    return this;
}

FieldModifierContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FieldModifierContext.prototype.constructor = FieldModifierContext;

FieldModifierContext.prototype.fieldExpressionGroup = function() {
    return this.getTypedRuleContext(FieldExpressionGroupContext,0);
};

FieldModifierContext.prototype.fieldExpression = function() {
    return this.getTypedRuleContext(FieldExpressionContext,0);
};

FieldModifierContext.prototype.variable = function() {
    return this.getTypedRuleContext(VariableContext,0);
};

FieldModifierContext.prototype.enterRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.enterFieldModifier(this);
	}
};

FieldModifierContext.prototype.exitRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.exitFieldModifier(this);
	}
};

FieldModifierContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DMQFieldVisitor ) {
        return visitor.visitFieldModifier(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DMQFieldParser.FieldModifierContext = FieldModifierContext;

DMQFieldParser.prototype.fieldModifier = function() {

    var localctx = new FieldModifierContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, DMQFieldParser.RULE_fieldModifier);
    try {
        this.state = 67;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case DMQFieldParser.LPAREN:
            this.enterOuterAlt(localctx, 1);
            this.state = 64;
            this.fieldExpressionGroup();
            break;
        case DMQFieldParser.SAFENAME:
        case DMQFieldParser.ANYNAME:
            this.enterOuterAlt(localctx, 2);
            this.state = 65;
            this.fieldExpression();
            break;
        case DMQFieldParser.ATPERSAND:
            this.enterOuterAlt(localctx, 3);
            this.state = 66;
            this.variable();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FieldOperatorContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DMQFieldParser.RULE_fieldOperator;
    return this;
}

FieldOperatorContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FieldOperatorContext.prototype.constructor = FieldOperatorContext;

FieldOperatorContext.prototype.OPERATOR = function() {
    return this.getToken(DMQFieldParser.OPERATOR, 0);
};

FieldOperatorContext.prototype.enterRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.enterFieldOperator(this);
	}
};

FieldOperatorContext.prototype.exitRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.exitFieldOperator(this);
	}
};

FieldOperatorContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DMQFieldVisitor ) {
        return visitor.visitFieldOperator(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DMQFieldParser.FieldOperatorContext = FieldOperatorContext;

DMQFieldParser.prototype.fieldOperator = function() {

    var localctx = new FieldOperatorContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, DMQFieldParser.RULE_fieldOperator);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 69;
        this.match(DMQFieldParser.OPERATOR);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FieldExpressionGroupContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DMQFieldParser.RULE_fieldExpressionGroup;
    return this;
}

FieldExpressionGroupContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FieldExpressionGroupContext.prototype.constructor = FieldExpressionGroupContext;

FieldExpressionGroupContext.prototype.LPAREN = function() {
    return this.getToken(DMQFieldParser.LPAREN, 0);
};

FieldExpressionGroupContext.prototype.fieldOperation = function() {
    return this.getTypedRuleContext(FieldOperationContext,0);
};

FieldExpressionGroupContext.prototype.RPAREN = function() {
    return this.getToken(DMQFieldParser.RPAREN, 0);
};

FieldExpressionGroupContext.prototype.enterRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.enterFieldExpressionGroup(this);
	}
};

FieldExpressionGroupContext.prototype.exitRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.exitFieldExpressionGroup(this);
	}
};

FieldExpressionGroupContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DMQFieldVisitor ) {
        return visitor.visitFieldExpressionGroup(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DMQFieldParser.FieldExpressionGroupContext = FieldExpressionGroupContext;

DMQFieldParser.prototype.fieldExpressionGroup = function() {

    var localctx = new FieldExpressionGroupContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, DMQFieldParser.RULE_fieldExpressionGroup);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 71;
        this.match(DMQFieldParser.LPAREN);
        this.state = 72;
        this.fieldOperation();
        this.state = 73;
        this.match(DMQFieldParser.RPAREN);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FieldExpressionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DMQFieldParser.RULE_fieldExpression;
    return this;
}

FieldExpressionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FieldExpressionContext.prototype.constructor = FieldExpressionContext;

FieldExpressionContext.prototype.fieldChain = function() {
    return this.getTypedRuleContext(FieldChainContext,0);
};

FieldExpressionContext.prototype.functionCall = function() {
    return this.getTypedRuleContext(FunctionCallContext,0);
};

FieldExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.enterFieldExpression(this);
	}
};

FieldExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.exitFieldExpression(this);
	}
};

FieldExpressionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DMQFieldVisitor ) {
        return visitor.visitFieldExpression(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DMQFieldParser.FieldExpressionContext = FieldExpressionContext;

DMQFieldParser.prototype.fieldExpression = function() {

    var localctx = new FieldExpressionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, DMQFieldParser.RULE_fieldExpression);
    try {
        this.state = 77;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 75;
            this.fieldChain();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 76;
            this.functionCall();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FieldChainContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DMQFieldParser.RULE_fieldChain;
    return this;
}

FieldChainContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FieldChainContext.prototype.constructor = FieldChainContext;

FieldChainContext.prototype.fieldChainLink = function() {
    return this.getTypedRuleContext(FieldChainLinkContext,0);
};

FieldChainContext.prototype.DOT = function() {
    return this.getToken(DMQFieldParser.DOT, 0);
};

FieldChainContext.prototype.fieldChain = function() {
    return this.getTypedRuleContext(FieldChainContext,0);
};

FieldChainContext.prototype.fieldName = function() {
    return this.getTypedRuleContext(FieldNameContext,0);
};

FieldChainContext.prototype.enterRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.enterFieldChain(this);
	}
};

FieldChainContext.prototype.exitRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.exitFieldChain(this);
	}
};

FieldChainContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DMQFieldVisitor ) {
        return visitor.visitFieldChain(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DMQFieldParser.FieldChainContext = FieldChainContext;

DMQFieldParser.prototype.fieldChain = function() {

    var localctx = new FieldChainContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, DMQFieldParser.RULE_fieldChain);
    try {
        this.state = 84;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 79;
            this.fieldChainLink();
            this.state = 80;
            this.match(DMQFieldParser.DOT);
            this.state = 81;
            this.fieldChain();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 83;
            this.fieldName();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FieldChainLinkContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DMQFieldParser.RULE_fieldChainLink;
    return this;
}

FieldChainLinkContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FieldChainLinkContext.prototype.constructor = FieldChainLinkContext;

FieldChainLinkContext.prototype.fieldName = function() {
    return this.getTypedRuleContext(FieldNameContext,0);
};

FieldChainLinkContext.prototype.enterRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.enterFieldChainLink(this);
	}
};

FieldChainLinkContext.prototype.exitRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.exitFieldChainLink(this);
	}
};

FieldChainLinkContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DMQFieldVisitor ) {
        return visitor.visitFieldChainLink(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DMQFieldParser.FieldChainLinkContext = FieldChainLinkContext;

DMQFieldParser.prototype.fieldChainLink = function() {

    var localctx = new FieldChainLinkContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, DMQFieldParser.RULE_fieldChainLink);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 86;
        this.fieldName();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FieldNameContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DMQFieldParser.RULE_fieldName;
    return this;
}

FieldNameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FieldNameContext.prototype.constructor = FieldNameContext;

FieldNameContext.prototype.escapedFieldName = function() {
    return this.getTypedRuleContext(EscapedFieldNameContext,0);
};

FieldNameContext.prototype.safeFieldName = function() {
    return this.getTypedRuleContext(SafeFieldNameContext,0);
};

FieldNameContext.prototype.enterRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.enterFieldName(this);
	}
};

FieldNameContext.prototype.exitRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.exitFieldName(this);
	}
};

FieldNameContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DMQFieldVisitor ) {
        return visitor.visitFieldName(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DMQFieldParser.FieldNameContext = FieldNameContext;

DMQFieldParser.prototype.fieldName = function() {

    var localctx = new FieldNameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, DMQFieldParser.RULE_fieldName);
    try {
        this.state = 90;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case DMQFieldParser.ANYNAME:
            this.enterOuterAlt(localctx, 1);
            this.state = 88;
            this.escapedFieldName();
            break;
        case DMQFieldParser.SAFENAME:
            this.enterOuterAlt(localctx, 2);
            this.state = 89;
            this.safeFieldName();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function VariableContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DMQFieldParser.RULE_variable;
    return this;
}

VariableContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VariableContext.prototype.constructor = VariableContext;

VariableContext.prototype.ATPERSAND = function() {
    return this.getToken(DMQFieldParser.ATPERSAND, 0);
};

VariableContext.prototype.SAFENAME = function() {
    return this.getToken(DMQFieldParser.SAFENAME, 0);
};

VariableContext.prototype.enterRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.enterVariable(this);
	}
};

VariableContext.prototype.exitRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.exitVariable(this);
	}
};

VariableContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DMQFieldVisitor ) {
        return visitor.visitVariable(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DMQFieldParser.VariableContext = VariableContext;

DMQFieldParser.prototype.variable = function() {

    var localctx = new VariableContext(this, this._ctx, this.state);
    this.enterRule(localctx, 22, DMQFieldParser.RULE_variable);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 92;
        this.match(DMQFieldParser.ATPERSAND);
        this.state = 93;
        this.match(DMQFieldParser.SAFENAME);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SafeFieldNameContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DMQFieldParser.RULE_safeFieldName;
    return this;
}

SafeFieldNameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SafeFieldNameContext.prototype.constructor = SafeFieldNameContext;

SafeFieldNameContext.prototype.SAFENAME = function() {
    return this.getToken(DMQFieldParser.SAFENAME, 0);
};

SafeFieldNameContext.prototype.enterRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.enterSafeFieldName(this);
	}
};

SafeFieldNameContext.prototype.exitRule = function(listener) {
    if(listener instanceof DMQFieldListener ) {
        listener.exitSafeFieldName(this);
	}
};

SafeFieldNameContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DMQFieldVisitor ) {
        return visitor.visitSafeFieldName(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DMQFieldParser.SafeFieldNameContext = SafeFieldNameContext;

DMQFieldParser.prototype.safeFieldName = function() {

    var localctx = new SafeFieldNameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 24, DMQFieldParser.RULE_safeFieldName);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 95;
        this.match(DMQFieldParser.SAFENAME);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};
